# simple_agents

./: .gitignore  OUTPUT_FORMATTING_GUIDE.md  README.md  agent.py  demo_output.py  formatting.py  main.py  pyproject.toml  scratch_pad.md  test_formatting.py  testing.ipynb  testing_agents.ipynb  tools.py
app/: cli.py  execution_builder.py  main.py
app/rag/: context_builder.py
core/: agent.py  document_processor.py  embeddings.py  tools.py
docker/: .dockerignore  Dockerfile  docker-compose.yml  start_db.sh
domain/: models.py
domain/models/: models.py  rag_source.py
infrastructure/: connection.py  db.py
infrastructure/repositories/: __init__.py  document_repo.py  execution_repo.py  rag_repo.py  vector_search.py
presentation/: cli_renderer.py
scripts/: backfill_embeddings.py
